--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "sweetalert2": "^11.7.31",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://prit-007.github.io/my-programme",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0",
+    "plugins": "react",
+    "extends":"eslint:recommended"
   }
 }
