--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://livedtermined.github.io/my-programme",
+  "homepage": "https://prit-007.github.io/my-programme",
   "name": "my-programme",
   "version": "0.1.0",
   "private": true,
